﻿Version 1.2.8
MVC 5
- SideWaffle fix: New GUID now generated for each project.
MVC 6
- SideWaffle fix: New GUID now generated for each project.
- SideWaffle fix: Target VSIX project template at .NET 4.5.1.
- gulp-tsc (TypeScript) and gulp-if added to package.json.
- userSecretsId set in project.json.
- SideWaffle _preprocess.xml updated so a new userSecretsId GUID is generated for each project.
- gulpfile.js updated so that you can now start with CSS (.css) or LESS (.less) and compile to CSS.
- gulpfile.js updated so that you can now start with TypeScript (.ts) or JavaScript (.js) and compile to JavaScript.
- AddUserSecrets for all environments in Startup.Configuration.cs.
- UseAspNetMvcBoilerplate in ApplicationBuilderExtensions.cs renamed to UseBoilerplate.

Version 1.2.7
MVC 5
- NoTrailingSlashAttribute updated to handle URL's with query strings.
- Boilerplate.Web.Mvc5 NuGet package updated to 1.0.17 containing the above change.
MVC 6
- NoTrailingSlashAttribute updated to handle URL's with query strings.
- Boilerplate.Web.Mvc6 NuGet package updated to 1.0.4 containing the above change.
- project.json keyFile path fixed.
- SideWaffle template settings updated in _project.cstemplate.xml.

Version 1.2.6
MVC 5
- Added trailing slashes to the URL's under httpErrors.
- RedirectToCanonicalUrlAttribute fixed to handle URL's with query strings and removed the ignore controllers parameter
  due to the fix above and this one it is no longer needed.
- Ignored controllers for the above fix removed from RedirectToCanonicalUrlAttribute in FilterConfig.cs.
- Upgraded the Boilerplate.Web.Mvc5 NuGet package to 1.0.15 which includes the above changes.
- Elmah constant removed from ControllerName.cs as it was no longer needed.
- ReadMe.html updated with a comment about Web.config settings not existing when using older versions of IIS 7.5 and 8.
MVC 6
- Turn off Razor View Pre-Compilation when compiling using the DEBUG solution configuration.