@@ -128,6 +128,10 @@
                         <input name="OtherSecurity-CheckSiteOnASafaWebCom" type="checkbox"> <strong>Check Site On ASafaWeb.com</strong> -
                         Scan your site for security vulnerabilities at <a href="https://asafaweb.com/">ASafaWeb.com</a>.
                     </li>
+                    <li class="list-group-item">
+                        <input name="OtherSecurity-UpgradeDotNet" type="checkbox"> <strong>Upgrade to .NET 4.6</strong> -
+                        Upgrade to .NET 4.6 to enable <a href="https://msdn.microsoft.com/library/jj152924.aspx">randomized hashes</a>.
+                    </li>
                 </ul>
             </article>
 
