@@ -1,6 +1,6 @@
 ﻿@{
     ViewBag.Title = "Page Not Found";
-    ViewBag.Description = "Sorry, but the page you were looking for can’t be found.";
+    ViewBag.Description = "Sorry, but the page you were looking for can't be found.";
 }
 
 <div class="jumbotron text-center">
