@@ -8,5 +8,7 @@
         public const string MethodNotAllowed = "MethodNotAllowed";
         public const string NotFound = "NotFound";
         public const string Unauthorized = "Unauthorized";
+
+        public const string Error = "Error";
     }
 }
