@@ -1,0 +1,34 @@
+﻿@{
+    switch (Response.StatusCode)
+    {
+        case 400:
+            ViewBag.Icon = "fa fa-ban text-danger";
+            ViewBag.Title = "Bad Request";
+            ViewBag.Description = "Your browser sent a request that this server could not understand.";
+        case 401:
+            ViewBag.Icon = "fa fa-ban text-danger";
+            ViewBag.Title = "Unauthorized";
+            ViewBag.Description = "Sorry, but the page requires authentication.";
+        case 403:
+            ViewBag.Icon = "fa fa-exclamation-circle text-danger";
+            ViewBag.Title = "Forbidden";
+            ViewBag.Description = "Sorry, but you don't have permission to access this page.";
+        case 404:
+            ViewBag.Icon = "fa fa-exclamation-circle text-danger";
+            ViewBag.Title = "Page Not Found";
+            ViewBag.Description = "Sorry, but the page you were looking for can't be found.";
+        case 500:
+        default:
+            ViewBag.Icon = "fa fa-exclamation-circle text-danger";
+            ViewBag.Title = "Unexpected Error";
+            ViewBag.Description = "Well, this is embarrassing. An error occurred while processing your request. Rest assured, this problem has been logged and hamsters have been released to fix the problem.";
+    }
+}
+
+<div class="jumbotron text-center">
+    <header>
+        <h1><span aria-hidden="true" class="@ViewBag.Icon"></span> @ViewBag.Title</h1>
+    </header>
+    <p>@ViewBag.Description</p>
+    <a class="btn btn-primary btn-lg" href="@Url.RouteUrl(HomeControllerRoute.GetIndex)"><span aria-hidden="true" class="fa fa-home"></span> Take me home</a>
+</div>
