@@ -1,5 +1,5 @@
 {
-  "version": "1.0.5-*",
+  "version": "1.0.6-*",
   "title": "ASP.NET MVC 6 Boilerplate Framework",
   "description": "Provides boilerplate framework code for an ASP.NET MVC project. ASP.NET MVC Boilerplate is a professional template for building secure, fast, robust and adaptable web applications or sites. It provides the minimum amount of code required on top of the default MVC template provided by Microsoft. You can download the ASP.NET MVC Boilerplate project template on the Visual Studio Gallery or download the code on GitHub.",
   "authors": [ "Muhammad Rehan Saeed (RehanSaeed.com)" ],
@@ -16,7 +16,8 @@
   },
 
   "dependencies": {
-    "Microsoft.AspNet.Mvc.Core": "6.0.0-beta5"
+    "Microsoft.AspNet.Mvc.Core": "6.0.0-beta5",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta5"
   },
 
   "frameworks": {
